develop the component

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,16 @@ set(PROJECT_SOURCES
         mainwindow.h
         serverthread.cpp
         serverthread.h
+#        server/map.cpp
+#        server/map.h
+        server/component.cpp
+        server/component.h
+#        server/maingame.cpp
+#        server/maingame.h
+#        server/base.cpp
+#        server/base.h
+#        server/ai.cpp
+#        server/ai.h
         mainwindow.ui
         ${TS_FILES}
 )
